...
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="new_label">NEW</string>
    <string name="cancel">Cancel</string>
    <string name="filters">Filters</string>
    <string name="reset">Reset</string>
    <string name="apply">Apply</string>
    <string name="any_year">Any year</string>
    <string name="tap_once_to_include_twice_to_exclude_thr">Tap once to include, twice to exclude, three times to clear.</string>
    <string name="search_series">Search series</string>
    <string name="clear">Clear</string>
    <string name="no_series_found">No series found.</string>
    <string name="recent_searches">Recent Searches</string>
...
